# VINS-Fusion-GPU

camera_models/: CMakeLists.txt
config/euroc/: cam0_pinhole.yaml  cam1_pinhole.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml  v2_euroc_stereo_imu_config.yaml
global_fusion/: CMakeLists.txt
loop_fusion/: CMakeLists.txt
vins_estimator/: CMakeLists.txt
vins_estimator/src/: rosNodeTest.cpp
